--- a/oe-feel-designer.html
+++ b/oe-feel-designer.html
@@ -35,6 +35,7 @@
             listeners: {
                 'decision-graph-selected':'_graphSelected',
                 'add-feel-component':'_handleAddNode',
+                'delete-component':'_handleDeleteNode',
                 'update-component-position':'_handlePositionUpdate',
                 'undo-decision-graph':'_handleUndoGraph',
                 'redo-decision-graph':'_handleRedoGraph'
@@ -60,6 +61,18 @@
                 var node = e.detail;
                 var decisiongraph = this._getCurrentGraph(this._currentStackIndex);
                 decisiongraph.graph.nodes.push(node);
+                this._pushToStack(decisiongraph);
+            },
+            _handleDeleteNode:function(e){
+                var nodeToDelete = e.detail;
+                var decisiongraph = this._getCurrentGraph(this._currentStackIndex);
+                var removeIndex = decisiongraph.graph.nodes.findIndex(function(node){
+                    return node.id === nodeToDelete.id;
+                });
+                decisiongraph.graph.nodes.splice(removeIndex,1);
+                decisiongraph.graph.connections = decisiongraph.graph.connections.filter(function(connection){
+                    return (connection.from !== nodeToDelete.i && nodeToDelete.i !== connection.to);
+                });
                 this._pushToStack(decisiongraph);
             },
             _handlePositionUpdate:function(e){
